--- a/src/privacy.html
+++ b/src/privacy.html
@@ -37,37 +37,40 @@
         <a href="#infocollect">1. WHAT INFORMATION DO WE COLLECT?</a>
       </li>
       <li>
-        <a href="#infouse">2. HOW DO WE USE YOUR INFORMATION?</a>
+        <a href="#healthconnect">2. GOOGLE HEALTH CONNECT INTEGRATION</a>
       </li>
       <li>
-        <a href="#infoshare">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</a>
+        <a href="#infouse">3. HOW DO WE USE YOUR INFORMATION?</a>
       </li>
       <li>
-        <a href="#cookies">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</a>
+        <a href="#infoshare">4. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</a>
       </li>
       <li>
-        <a href="#inforetain">5. HOW LONG DO WE KEEP YOUR INFORMATION?</a>
+        <a href="#cookies">5. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</a>
       </li>
       <li>
-        <a href="#infosafe">6. HOW DO WE KEEP YOUR INFORMATION SAFE?</a>
+        <a href="#inforetain">6. HOW LONG DO WE KEEP YOUR INFORMATION?</a>
       </li>
       <li>
-        <a href="#infominors">7. DO WE COLLECT INFORMATION FROM MINORS?</a>
+        <a href="#infosafe">7. HOW DO WE KEEP YOUR INFORMATION SAFE?</a>
       </li>
       <li>
-        <a href="#privacyrights">8. WHAT ARE YOUR PRIVACY RIGHTS?</a>
+        <a href="#infominors">8. DO WE COLLECT INFORMATION FROM MINORS?</a>
       </li>
       <li>
-        <a href="#DNT">9. CONTROLS FOR DO-NOT-TRACK FEATURES</a>
+        <a href="#privacyrights">9. WHAT ARE YOUR PRIVACY RIGHTS?</a>
       </li>
       <li>
-        <a href="#caresidents">10. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
+        <a href="#DNT">10. CONTROLS FOR DO-NOT-TRACK FEATURES</a>
       </li>
       <li>
-        <a href="#policyupdates">11. DO WE MAKE UPDATES TO THIS POLICY?</a>
+        <a href="#caresidents">11. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
       </li>
       <li>
-        <a href="#contact">12. HOW CAN YOU CONTACT US ABOUT THIS POLICY?</a>
+        <a href="#policyupdates">12. DO WE MAKE UPDATES TO THIS POLICY?</a>
+      </li>
+      <li>
+        <a href="#contact">13. HOW CAN YOU CONTACT US ABOUT THIS POLICY?</a>
       </li>
     </ul>
 
@@ -91,7 +94,49 @@
     <p>Like many businesses, we also collect information through cookies and similar technologies.</p>
 
     <h2>
-      <a id="infouse">2. HOW DO WE USE YOUR INFORMATION?</a>
+      <a id="healthconnect">2. GOOGLE HEALTH CONNECT INTEGRATION</a>
+    </h2>
+    <p>
+      Our app integrates with Google Health Connect to access and store specific health-related data, including body weight and
+      body fat. Here's how we handle this data:
+    </p>
+
+    <h3>1. Data Collection</h3>
+    <p>
+      We collect Health Connect data through the Health Connect integration to enhance the app's
+      functionality. This data is used solely for tracking and providing insights within the app.
+    </p>
+
+    <h3>2. Data Storage</h3>
+    <p>
+      The collected data is stored locally on your device and in the cloud on our servers. We implement strict
+      security measures to protect this data from unauthorized access, ensuring it is stored safely and securely.
+    </p>
+
+    <h3>3. Data Usage</h3>
+    <p>
+      The data collected from Health Connect is not used for any purpose other than to provide app functionality. We do
+      not use this data for marketing or advertising.
+    </p>
+
+    <h3>4. Data Sharing</h3>
+    <p>
+      We do not share, sell, or disclose your health data to third parties. Your data is private and is only accessible
+      within the app for your use.
+    </p>
+
+    <h3>5. User Control</h3>
+    <p>
+      You retain control over your data. You can choose to delete or update your body weight and body fat data at any
+      time within the app. If you wish to delete your data stored on our servers, you can request this through the app's
+      settings</a>.
+    </p>
+
+    <h3>6. Compliance</h3>
+    <p>We comply with all applicable privacy laws and regulations related to the use and storage of health data.</p>
+
+    <h2>
+      <a id="infouse">3. HOW DO WE USE YOUR INFORMATION?</a>
     </h2>
     <h4>
       <strong>In Short:</strong> We process your information for purposes based on legitimate business interests, the
@@ -123,7 +168,7 @@
     </ul>
 
     <h2>
-      <a id="infoshare">3. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</a>
+      <a id="infoshare">4. WILL YOUR INFORMATION BE SHARED WITH ANYONE?</a>
     </h2>
 
     <h4>
@@ -187,7 +232,7 @@
     </ul>
 
     <h2>
-      <a id="cookies">4. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</a>
+      <a id="cookies">5. DO WE USE COOKIES AND OTHER TRACKING TECHNOLOGIES?</a>
     </h2>
     <h4>
       <strong>In Short:</strong> We may use cookies and other tracking technologies to collect and store your
@@ -201,7 +246,7 @@
     </p>
 
     <h2>
-      <a id="inforetain">5. HOW LONG DO WE KEEP YOUR INFORMATION?</a>
+      <a id="inforetain">6. HOW LONG DO WE KEEP YOUR INFORMATION?</a>
     </h2>
     <h4>
       <strong>In Short:</strong> We keep your information for as long as necessary to fulfill the purposes outlined in
@@ -221,7 +266,7 @@
     </p>
 
     <h2>
-      <a id="infosafe">6. HOW DO WE KEEP YOUR INFORMATION SAFE?</a>
+      <a id="infosafe">7. HOW DO WE KEEP YOUR INFORMATION SAFE?</a>
     </h2>
     <h4>
       <strong>In Short:</strong> We aim to protect your personal information through a system of organizational and
@@ -236,7 +281,7 @@
     </p>
 
     <h2>
-      <a id="infominors">7. DO WE COLLECT INFORMATION FROM MINORS?</a>
+      <a id="infominors">8. DO WE COLLECT INFORMATION FROM MINORS?</a>
     </h2>
     <h4>
       <strong>In Short:</strong> We do not knowingly collect data from or market to children under 18 years of age.
@@ -251,7 +296,7 @@
     </p>
 
     <h2>
-      <a id="privacyrights">8. WHAT ARE YOUR PRIVACY RIGHTS?</a>
+      <a id="privacyrights">9. WHAT ARE YOUR PRIVACY RIGHTS?</a>
     </h2>
 
     <h4>
@@ -310,7 +355,7 @@
     </p>
 
     <h2>
-      <a id="DNT">9. CONTROLS FOR DO-NOT-TRACK FEATURES</a>
+      <a id="DNT">10. CONTROLS FOR DO-NOT-TRACK FEATURES</a>
     </h2>
 
     <p>
@@ -323,7 +368,7 @@
     </p>
 
     <h2>
-      <a id="caresidents">10. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
+      <a id="caresidents">11. DO CALIFORNIA RESIDENTS HAVE SPECIFIC PRIVACY RIGHTS?</a>
     </h2>
 
     <p>
@@ -348,7 +393,7 @@
     </p>
 
     <h2>
-      <a id="policyupdates">11. DO WE MAKE UPDATES TO THIS POLICY?</a>
+      <a id="policyupdates">12. DO WE MAKE UPDATES TO THIS POLICY?</a>
     </h2>
     <p><strong>In Short:</strong> Yes, we will update this policy as necessary to stay compliant with relevant laws.</p>
     <p>
@@ -360,7 +405,7 @@
     </p>
 
     <h2>
-      <a id="contact">12. HOW CAN YOU CONTACT US ABOUT THIS POLICY?</a>
+      <a id="contact">13. HOW CAN YOU CONTACT US ABOUT THIS POLICY?</a>
     </h2>
     <p>
       If you have questions or comments about this policy, you may email us at
@@ -379,44 +424,5 @@
       This privacy policy was created using
       <a href="https://termly.io/products/privacy-policy-generator/?ftseo">Termly's Privacy Policy Generator</a>.
     </p>
-
-    <h2>HEALTH CONNECT INTEGRATION</h2>
-    <p>
-      Our app integrates with Health Connect to access and store specific health-related data, including body weight and
-      body fat. Here's how we handle this data:
-    </p>
-
-    <h3>1. Data Collection</h3>
-    <p>
-      We collect Health Connect data through the Health Connect integration to enhance the app's
-      functionality. This data is used solely for tracking and providing insights within the app.
-    </p>
-
-    <h3>2. Data Storage</h3>
-    <p>
-      The collected data is stored locally on your device and in the cloud on our servers. We implement strict
-      security measures to protect this data from unauthorized access, ensuring it is stored safely and securely.
-    </p>
-
-    <h3>3. Data Usage</h3>
-    <p>
-      The data collected from Health Connect is not used for any purpose other than to provide app functionality. We do
-      not use this data for marketing or advertising.
-    </p>
-
-    <h3>4. Data Sharing</h3>
-    <p>
-      We do not share, sell, or disclose your health data to third parties. Your data is private and is only accessible
-      within the app for your use.
-    </p>
-
-    <h3>5. User Control</h3>
-    <p>
-      You retain control over your data. You can choose to delete or update your body weight and body fat data at any
-      time within the app. If you wish to delete your data stored on our servers, you can request this through the app's
-      settings</a>.
-    </p>
-
-    <h3>6. Compliance</h3>
-    <p>We comply with all applicable privacy laws and regulations related to the use and storage of health data.</p>
+  </body>
 </html>
