Add user dashboard events list

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
     <script>
       var _rollbarConfig = {
           accessToken: "f29180c0746c4922996ff41dfc2527d2",
-          captureUncaught: true,
-          captureUnhandledRejections: true,
+          captureUncaught: false,
+          captureUnhandledRejections: false,
           payload: {
               environment: "production"
           }
