--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Liftosaur: Weight Lifting Tracking App</title>
@@ -48,7 +48,6 @@
     </script>
     <style>
       html,
-      body,
       #app {
         height: 100%;
       }
@@ -56,6 +55,8 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="modal"></div>
+    <div id="keyboard"></div>
     <noscript>JavaScript is required for Liftosaur to work</noscript>
     <script src="/vendors.js?vendor=xxxxxxxx"></script>
     <script src="/app.js?version=xxxxxxxx"></script>
