--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
   <body>
     <div id="app"></div>
     <div id="modal"></div>
+    <div id="bottomsheet"></div>
     <div id="keyboard"></div>
     <noscript>JavaScript is required for Liftosaur to work</noscript>
     <script src="/vendors.js?vendor=xxxxxxxx"></script>
