Update health connect privacy policy

--- a/src/healthconnectprivacypolicy.html
+++ b/src/healthconnectprivacypolicy.html
@@ -3,7 +3,9 @@
     <h1>Liftosaur Privacy Policy for Health Connect Integration</h1>
     <p>
       Our app integrates with Health Connect to access and store specific health-related data, including body weight and
-      body fat. Here's how we handle this data:
+      body fat percentage. You can track your body weight and body fat in the app. If you go to Me -> Measurements,
+      you'll be able to enter your body weight and body fat there, and it may be synced to Health Connect. The app also can
+      sync that data from Health Connect to display inside of the app. Here's how we handle this data:
     </p>
 
     <h3>1. Data Collection</h3>
@@ -33,8 +35,8 @@
     <h3>5. User Control</h3>
     <p>
       You retain control over your data. You can choose to delete or update your body weight and body fat data at any
-      time within the app. If you wish to delete your data stored on our servers, you can request this through the app's
-      settings</a>.
+      time within the app. If you wish to delete your data stored on our servers, you can do that through the app's
+      settings (Me -> Account -> Delete Current Cloud Account)</a>.
     </p>
 
     <h3>6. Compliance</h3>
