Replace twitter links to youtube on the site

--- a/src/about.html
+++ b/src/about.html
@@ -40,7 +40,7 @@
             <a target="_blank" href="https://www.instagram.com/liftosaurapp" class="logo-instagram"><span>Instagram</span></a>
           </li>
           <li>
-            <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"><span>Twitter</span></a>
+            <a target="_blank" href="https://www.youtube.com/@Liftosaur" class="logo-youtube"><span>Youtube</span></a>
           </li>
           <li>
             <a target="_blank" href="https://www.reddit.com/r/liftosaur" class="logo-reddit"><span>Reddit</span></a>
@@ -425,8 +425,8 @@ if (state.failures > 2) {
                   >
                 </li>
                 <li>
-                  <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"
-                    ><span>Twitter</span></a
+                  <a target="_blank" href="https://www.youtube.com/@Liftosaur" class="logo-youtube"
+                    ><span>Youtube</span></a
                   >
                 </li>
                 <li>
