--- a/src/record.html
+++ b/src/record.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <title>Liftosaur: Weight Lifting Tracking App | Workout summary</title>
@@ -58,7 +58,7 @@
             <a target="_blank" href="https://www.facebook.com/liftosaur" class="logo-facebook"><span>Facebook</span></a>
           </li>
           <li>
-            <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"><span>Twitter</span></a>
+            <a target="_blank" href="https://www.youtube.com/@Liftosaur" class="logo-youtube"><span>Youtube</span></a>
           </li>
           <li>
             <a target="_blank" href="https://www.reddit.com/r/liftosaur" class="logo-reddit"><span>Reddit</span></a>
@@ -87,8 +87,8 @@
                     >
                   </li>
                   <li>
-                    <a target="_blank" href="https://www.twitter.com/liftosaur" class="logo-twitter"
-                      ><span>Twitter</span></a
+                    <a target="_blank" href="https://www.youtube.com/@Liftosaur" class="logo-youtube"
+                      ><span>Youtube</span></a
                     >
                   </li>
                   <li>
