--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <link rel="preload" href="/images/front-muscles.svg" as="image" />
     <link rel="preload" href="/images/back-muscles.svg" as="image" />
+    <link rel="preload" href="/images/svgs/muscles-combined.svg" as="image" />
+    <link rel="preload" href="/images/svgs/musclegroups-combined.svg" as="image" />
     <link rel="shortcut icon" type="image/x-icon" href="/icons/favicon.ico" />
     <link rel="apple-touch-icon" href="/icons/icon512.png" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
