--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,17 @@
         height: 100%;
       }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-98XGEN6RQK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-98XGEN6RQK");
+    </script>
   </head>
   <body class="bg-background-default text-text-primary">
     <div id="app"></div>
