Anonymize IP in GA4

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-98XGEN6RQK");
+      gtag("config", "G-98XGEN6RQK", { anonymize_ip: true });
     </script>
   </head>
   <body class="bg-background-default text-text-primary">
